[tool.poetry]
name = "clip_pyclip"
version = "0.1.2"
description = ""
authors = ["jasoc <paridegiunta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
distro = "^1.6.0"
psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tests = "tests:start_all"