[tool.poetry]
name = "clip-webserver"
version = "0.1.1"
description = ""
authors = ["jasoc <paridegiunta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
psutil = "^5.9.1"
pyclip = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
