[tool.poetry]
name = "clip-webserver"
version = "0.1.1"
description = ""
authors = ["jasoc <paridegiunta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pyclip = "0.1.2"

[tool.poetry.dev-dependencies]
pyclip = {path = "../pyclip", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
